--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@ body {
     margin: 0px;
 }
 
-header {
+header,
+#controls {
     width: 80%;
-    max-width: 1024px;
+    max-width: 720px;
     margin: 2rem auto;
+}
 
+header {
     text-align: center;
 }
 
